# problemset-answer

./: .gitignore  README.md  new.sh
codeforces/: README.md  new.sh  open.sh
codeforces/.empty/: configure.ac
codeforces/.empty/src/: Makefile.am
codeforces/112A/: .anjuta_sym_db.db  Makefile  Makefile.in  config.h  config.status  configure  configure.ac  libtool
codeforces/112A/autom4te.cache/: output.0  output.1  requests  traces.1
codeforces/112A/po/: Makefile  Makefile.in
codeforces/112A/src/: 112A  Makefile  Makefile.am  Makefile.in  main.cc  main.cc~
codeforces/112A/src/.deps/: main.Po
codeforces/116A/: .anjuta_sym_db.db  Makefile  config.h  config.status  configure  configure.ac  libtool
codeforces/116A/autom4te.cache/: output.0  output.1  requests  traces.1
codeforces/116A/po/: Makefile  Makefile.in
codeforces/116A/src/: 116A  Makefile  Makefile.am  Makefile.in  main.cc  main.cc~
codeforces/122A/: .anjuta_sym_db.db  configure.ac
codeforces/122A/src/: Makefile.am  main.cc
codeforces/131A/: .anjuta_sym_db.db  Makefile  config.h  config.status  configure  configure.ac  libtool
codeforces/131A/autom4te.cache/: output.0  output.1  requests  traces.1
codeforces/131A/po/: Makefile  Makefile.in
codeforces/131A/src/: 131A  Makefile  Makefile.am  Makefile.in  main.cc~
codeforces/133A/: .anjuta_sym_db.db  Makefile  config.h  config.status  configure  configure.ac  libtool
codeforces/133A/autom4te.cache/: output.0  output.1  requests  traces.1
codeforces/133A/po/: Makefile  Makefile.in
codeforces/133A/src/: 133A  Makefile  Makefile.am  Makefile.in  main.cc  main.cc~
codeforces/158A/: .anjuta_sym_db.db  Makefile  config.h  config.status  configure  configure.ac  libtool
codeforces/158A/autom4te.cache/: output.0  output.1  requests  traces.1
codeforces/158A/po/: Makefile  Makefile.in
codeforces/158A/src/: 158A  Makefile  Makefile.am  Makefile.in  main.cc
codeforces/158A/src/.deps/: main.Po
codeforces/158B/: .anjuta_sym_db.db  Makefile  config.h  config.status  configure  configure.ac  libtool
codeforces/158B/autom4te.cache/: output.0  output.1  requests  traces.1
codeforces/158B/po/: Makefile  Makefile.in
codeforces/158B/src/: 158B  Makefile  Makefile.am  Makefile.in  main.cc  main.cc~
codeforces/158B/src/.deps/: main.Po
codeforces/236A/: .anjuta_sym_db.db  Makefile  config.h  config.status  configure  configure.ac  libtool
codeforces/236A/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
codeforces/236A/po/: Makefile  Makefile.in
codeforces/236A/src/: 236A  Makefile  Makefile.am  Makefile.in  main.cc  main.cc~
codeforces/236A/src/.deps/: main.Po
codeforces/263A/: .anjuta_sym_db.db  configure.ac
codeforces/263A/src/: Makefile.am  main.cc
codeforces/266A/: .anjuta_sym_db.db  Makefile  config.h  config.status  configure  configure.ac  libtool
codeforces/266A/autom4te.cache/: output.0  output.1  requests  traces.1
codeforces/266A/po/: Makefile  Makefile.in
codeforces/266A/src/: 266A  Makefile  Makefile.am  Makefile.in  main.cc  main.cc~
codeforces/268B/: .anjuta_sym_db.db  configure.ac
codeforces/268B/src/: Makefile.am  main.cc  main.cc~
codeforces/281A/: .anjuta_sym_db.db  Makefile  Makefile.in  config.h  config.status  configure  configure.ac  libtool
codeforces/281A/autom4te.cache/: output.0  output.1  requests  traces.1
codeforces/281A/po/: Makefile  Makefile.in
codeforces/339A/: .anjuta_sym_db.db  Makefile  config.h  config.status  configure  configure.ac  libtool
codeforces/339A/src/: 339A  Makefile  Makefile.am  Makefile.in  main.cc~
codeforces/467A/: .anjuta_sym_db.db  Makefile  config.h  config.status  configure  configure.ac  libtool
codeforces/467A/src/: 467A  Makefile  Makefile.am  Makefile.in  main.cc  main.cc~
codeforces/546A/: .anjuta_sym_db.db  Makefile  config.h  config.status  configure  configure.ac  libtool
codeforces/58A/: .anjuta_sym_db.db  Makefile  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
codeforces/58A/src/: 58A  Makefile  Makefile.am  Makefile.in  main.cc~
(+48 files in other folders)
